Development
    Convert tempnam to gmp_tempname
    Fix memory leak in parse_basic
    Fix problem with opening a ASF reference playlist
    Change filtering rules to only use song title when necessary, gives better results
    In cover art url retrival only add a value to the filter if it is more than 0 characters
    Added album title to the list store
    Make album cover loading multithreaded, now it doesn't lag
    Implement Album Cover downloading using libcurl (new library requirement)
        Non-threaded so might be slow.
    Remove metadata parser from thread_reader, we already know all of the info from loading file
    Consolidate code into play_iter
    RIP play_file (Nov 25,2006 - Nov 7,2008), replace with play_iter
    Rework get_metadata, make it more flexible
    Move gnome-mplayer.conf (when running in non-gconf mode) to .gnome-mplayer from .mplayer
    Create $HOME/.gnome-mplayer directory for preferences and cache
    Add some more metadata items to the list store
    Add in the code to try and fetch the cover art url from musicbrainz
    Put some fixes in for the thumbnail support
    Add in support for compiling with libmusicbrainz, is not used yet
    Add in support for reading in iPod artwork, still not displayed
    Fix operation of Open Recent Menu
    Allow user to edit the Audio and Subtitle preferred languages and keep the setting in the gui
    Updated french translation
    Don't save the window location and size if window is fullscreen when app quits
    Add preference key of 'disable_animation' that disables the fullscreen animation
    Updated serbian translation
    Rework configure.in to make it work better with optional features
    Fix playlist load after saving
    Add Open iPod to file menu when we have libgpod support
    When playlist is active, wire arrow and page keys to the list and not to mplayer
    Remember window size, in addition to location when preference set